k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docs-mold
  namespace: protech
  labels:
    app: docs-mold
spec:
  type: ClusterIP
  selector:
    app: docs-mold
  ports:
    - name: http
      port: 3001
      targetPort: http
