k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docs-mold
  namespace: protech
  labels:
    app: docs-mold
spec:
  ingressClassName: nginx
  rules:
    - host: docs-mold.apps.orca.cloud.hancom.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docs-mold
                port:
                  number: 3001
